# qupai-media-thirdparty

./: Build.fdk-aac.android.sh  Build.ffmpeg.android.sh  Build.x264.android.sh  CMakeLists.txt  README.md
fdk-aac/: CMakeLists.txt
